# Little-CMS

./: CMakeLists.txt
cmake/: lcms2Config.cmake
src/: CMakeLists.txt
